fix CE-67 bug #9 - tracker table menu horizontal scroll & width

--- a/src/containers/ProductTracker/ProductTrackerTable/index.scss
+++ b/src/containers/ProductTracker/ProductTrackerTable/index.scss
@@ -42,6 +42,9 @@ $link-color: #349af8;
     }
   }
   .tracker-menu {
+    overflow-y: auto;
+    width: 58.9%;
+
     .ui.secondary.pointing.menu .item {
       justify-content: center;
     }
